Fix commit message overflow

--- a/static/main.css
+++ b/static/main.css
@@ -78,6 +78,7 @@ a {
     .list .commit {
       display: block;
       clear: both;
+      word-wrap: break-word;
     }
 
 .info {
